# translate

./: debug_connection.py  debug_raw_response.py  main.py  pyproject.toml  verify_agent.py
.agent/workflows/: run.md
agent/: bot.py  models.py  prompts.py
static/: index.html  script.js  style.css
tools/: custom_tools.py
